[gd_scene load_steps=8 format=2]

[ext_resource path="res://escenas/Mundo/mundo.gd" type="Script" id=1]
[ext_resource path="res://assets/fondo.jpg" type="Texture" id=2]
[ext_resource path="res://escenas/Personaje/Personaje.tscn" type="PackedScene" id=3]
[ext_resource path="res://escenas/Generador/Generador.tscn" type="PackedScene" id=4]
[ext_resource path="res://escenas/Generador2/Generador2.tscn" type="PackedScene" id=5]
[ext_resource path="res://escenas/HUD.tscn" type="PackedScene" id=6]

[sub_resource type="Animation" id=1]
resource_name = "move_spawn"
length = 14.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4.5, 5, 5.5, 6, 6.5, 7, 7.5, 8, 8.5, 9, 9.5, 10, 10.5, 11, 11.5, 12, 12.5, 13, 13.5, 14 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 840, 4.5 ), Vector2( 840, 48.1722 ), Vector2( 840, 91.8444 ), Vector2( 840, 135.517 ), Vector2( 840, 179.189 ), Vector2( 840, 222.861 ), Vector2( 840, 266.533 ), Vector2( 840, 310.206 ), Vector2( 840, 353.878 ), Vector2( 840, 397.55 ), Vector2( 840, 441.222 ), Vector2( 840, 484.894 ), Vector2( 840, 528.567 ), Vector2( 840, 572.239 ), Vector2( 840, 615.911 ), Vector2( 840, 572.239 ), Vector2( 840, 528.567 ), Vector2( 840, 484.894 ), Vector2( 840, 441.222 ), Vector2( 840, 397.55 ), Vector2( 840, 353.878 ), Vector2( 840, 310.205 ), Vector2( 840, 266.533 ), Vector2( 840, 222.861 ), Vector2( 840, 179.189 ), Vector2( 840, 135.517 ), Vector2( 840, 91.8444 ), Vector2( 840, 48.1722 ), Vector2( 840, 4.5 ) ]
}

[node name="mundo" type="Node2D"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -2.0
margin_top = 2.0
margin_right = 757.0
margin_bottom = 616.0
texture = ExtResource( 2 )
expand = true

[node name="Personaje" parent="." instance=ExtResource( 3 )]
position = Vector2( 52.9058, 53.8388 )

[node name="ScoreTimer" type="Timer" parent="."]
one_shot = true

[node name="StartTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 367.535, 409.897 )

[node name="Generador" parent="." instance=ExtResource( 4 )]
position = Vector2( 840, 4.5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Generador"]
autoplay = "move_spawn"
anims/move_spawn = SubResource( 1 )

[node name="Generador2" parent="." instance=ExtResource( 5 )]
position = Vector2( 385.153, 665.616 )

[node name="HUD" parent="." instance=ExtResource( 6 )]

[connection signal="new_game" from="." to="." method="new_game"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="start_game"]
